Misc styling changes

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,4 +4,9 @@
 
 .container {
     width: 95% !important;
+    max-width: 95% !important;
+}
+
+#batchedJobsAccordion {
+    text-align: left !important;
 }
