--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,11 @@
                         <li class="nav-item row w-100">
                             <div class="col-auto">
                                 <a class="nav-link" href="{{ url_for('index') }}">Dashboard</a>
-                            </div>                   
+                            </div>                 
+                            <div class="col-auto">
+                                <a class="nav-link" href="{{ url_for('edit_config') }}">Edit Configuration</a>
+                            </div>    
                         </li>
-                        <!-- Add more navigation links as needed -->
                     </ul>
                 </div>
             </div>
