Fixed config; gets rid of latest revisions for now.

--- a/static/styles.css
+++ b/static/styles.css
@@ -13,6 +13,10 @@
     margin:auto;
 }
 
+#config-json {
+    height:80vh !important;
+}
+
 #batchedJobsAccordion {
     text-align: left !important;
 }
