Working to try and reintroduce executive review

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
                                 <a class="nav-link" href="{{ url_for('index') }}">Dashboard</a>
                             </div>
                             <div class="col-auto">
+                                <a class="nav-link" href="{{ url_for('latest_revisions') }}">Executive Review</a>
+                            </div>    
+                            <div class="col-auto">
                                 <a class="nav-link" href="{{ url_for('edit_config') }}">Edit Configuration</a>
                             </div>    
                         </li>
