--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
                             <div class="col-auto">
                                 <a class="nav-link" href="{{ url_for('edit_config') }}">Edit Configuration</a>
                             </div>    
+                            <div class="col-auto">
+                                <a class="nav-link" href="{{ url_for('logs') }}">View Log</a>
+                            </div>    
                         </li>
                     </ul>
                 </div>
