--- a/templates/logs.html
+++ b/templates/logs.html
@@ -10,6 +10,7 @@
         width: 100%;
         border: 1px solid #ccc;
         overflow-y: scroll;
+        white-space: pre;
     }
 </style>
 <script>
