--- a/templates/logs.html
+++ b/templates/logs.html
@@ -6,7 +6,7 @@
 <div id="log"></div>
 <style>
     #log {
-        height: 300px;
+        height: 80vh;
         width: 100%;
         border: 1px solid #ccc;
         overflow-y: scroll;
